@@ -90,7 +90,8 @@ _treeList = [
         'DVC_IndexListModel',
         'Cairo',
         'Cairo_Snippets',
-        'SystemSettings'
+        'SystemSettings',
+        'GridLabelRenderer',
         ]),
 
     # managed windows == things with a (optional) caption you can close
@@ -139,6 +140,7 @@ _treeList = [
         'Gauge',
         'Grid',
         'Grid_MegaExample',
+        'GridLabelRenderer',
         'ListBox',
         'ListCtrl',
         'ListCtrl_virtual',
