@@ -153,6 +153,9 @@ wx.grid.Grid:  Added methods CalcRowLabelsExposed,
 CalcColLabelsExposed, CalcCellsExposed, DrawRowLabels, DrawRowLabel,
 DrawColLabels, and DrawColLabel.
 
+Added the wx.lib.mixins.gridlabelrenderer module.  It enables the use
+of label renderers for Grids that work like the cell renderers do.  See
+the demo for a simple sample.
 
 
 
